--- a/h-chloupek.css
+++ b/h-chloupek.css
@@ -191,25 +191,25 @@ img {
 }
 
 #l2 {
-  background-image: url(/02/chloupek2.jpg) ;
+  background-image: url(chloupek2.jpg) ;
 }
 
 #l3 {
-  background-image: url(/02/chloupek3.jpg);
+  background-image: url(chloupek3.jpg);
 }
 
 #l5{
-  background-image: url(/02/chloupek4.jpg);
+  background-image: url(chloupek4.jpg);
   grid-row: 1/3;
 }
 
 #l6{
-  background-image: url(/02/chloupek5.jpeg);
+  background-image: url(chloupek5.jpeg);
   background-position-y: 80%;
 }
 
 #l7{
-  background-image: url(./02/chloupek\ 6.jpg);
+  background-image: url(chloupek 6.jpg);
 
 }
 
